--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "express": "^4.18.2",
+    "graphql": "^16.6.0",
+    "mongodb": "^5.1.0",
+    "mongoose": "^7.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
